# HTTP-Server-Practice

./: CMakeLists.txt  README.md  TODO.md  main.cpp
config/: config.toml
include/: http.hpp  logs.hpp  server.hpp  socket.hpp
src/: compose.cpp  config-parser.hs  http.cpp  parser.hs  request.cpp  response.cpp  server-config-parser.hs  server.cpp  socket.cpp
src/http/: CMakeLists.txt
src/net/: socket.cpp
src/server/: CMakeLists.txt  server.cpp  server.hpp  socket.cpp  socket.hpp
test/: index.html
